# elbrus

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  A_Z_ROADMAP.md  Cargo.toml  LICENSE-APACHE  README.md  ROADMAP_CONTINUATION.md  STARTER_CONVO.md  jq_queries.md  justfile  scratchpad.md  to_justfile.md
crates/elbrus-analysis/: Cargo.toml
crates/elbrus-analysis/src/: lib.rs
crates/elbrus-cli/: Cargo.toml
crates/elbrus-cli/src/: main.rs
crates/elbrus-collection/: Cargo.toml
crates/elbrus-collection/src/: lib.rs
crates/elbrus-combos/: Cargo.toml
crates/elbrus-combos/src/: lib.rs
crates/elbrus-core/: Cargo.toml
crates/elbrus-core/src/: card.rs  collection.rs  color.rs  error.rs  game.rs  keyword.rs  legality.rs  lib.rs  mana.rs  oracle.rs  ruling.rs  types.rs
crates/elbrus-db/: Cargo.toml
crates/elbrus-db/migrations/: 001_initial_schema.sql  002_fts5.sql  003_collections_and_prices.sql
crates/elbrus-db/src/: backend.rs  fts.rs  lib.rs  sqlite.rs
crates/elbrus-db/src/repo/: card.rs  collection.rs  mod.rs  price.rs
crates/elbrus-db/tests/: integration.rs
crates/elbrus-deck/: Cargo.toml
crates/elbrus-deck/src/: lib.rs
crates/elbrus-draft/: Cargo.toml
crates/elbrus-draft/src/: lib.rs
crates/elbrus-parser/: Cargo.toml
crates/elbrus-parser/src/: lib.rs  mana_cost.rs
crates/elbrus-parser/tests/: mana_cost.rs
crates/elbrus-parser/tests/data/: mana_costs.json
crates/elbrus-py/: Cargo.toml
crates/elbrus-py/src/: lib.rs
crates/elbrus-rules/: Cargo.toml
crates/elbrus-rules/src/: lib.rs
crates/elbrus-scryfall/: Cargo.toml
crates/elbrus-scryfall/src/: bulk.rs  convert.rs  lib.rs  models.rs
crates/elbrus-scryfall/tests/: integration.rs
crates/elbrus-scryfall/tests/data/: sample.json
crates/elbrus-wasm/: Cargo.toml
docs/: A_Z_ROADMAP.md  ROADMAP_CONTINUATION.md
docs/roadmap/: README.md  api-sketches.md  hard-problems.md  overview.md  phase-0-hygiene.md  phase-1-foundation.md  phase-2-user-facing.md  phase-3-analysis.md  phase-4-interfaces.md  phase-5-rules.md  stretch.md
jq/: digital_games_distribution.jq  digital_only_cards.jq  layout_cards_with_faces.jq  layout_face_usage_by_layout.jq  legalities_banned_cards.jq  legalities_commander_legal_cards.jq  legalities_formats.jq  mana_distinct_costs_all_faces.jq  mana_distinct_costs_root.jq  mana_hybrid_cards.jq  mana_no_cost_cards.jq  mana_phyrexian_cards.jq  mana_x_cost_cards.jq  orientation_layouts.jq  orientation_rarities.jq  orientation_top_level_keys.jq  prices_distribution.jq  prices_null_usd_cards.jq  types_all_subtypes.jq  types_distinct_type_lines.jq  types_multitype_cards.jq  types_no_subtypes.jq
scripts/: check-conventional-commit.sh  download_bulk.py  sample_cards.py
