[workspace]
resolver = "2"
members = [
	"crates/elbrus-core",
	"crates/elbrus-scryfall",
	"crates/elbrus-db",
	"crates/elbrus-deck",
	"crates/elbrus-rules",
	"crates/elbrus-draft",
	"crates/elbrus-collection",
	"crates/elbrus-analysis",
	"crates/elbrus-combos",
	"crates/elbrus-cli",
	"crates/elbrus-py",
	"crates/elbrus-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["RJ Larson"]


[workspace.dependencies]
### Core
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
arc-swap = "1"
smallvec = { version = "1", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }

### Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

### DB
sqlx = { version = "0.8", features = [
	"runtime-tokio",
	"sqlite",
	"uuid",
	"chrono",
	"macros",
] }

### HTTP (optional/live)
reqwest = { version = "0.12", features = [
	"json",
	"stream",
], default-features = false }

### Bindings
pyo3 = { version = "0.23", features = ["extension-module"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
