[package]
name = "elbrus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
elbrus-core = { path = "../elbrus-core" }
elbrus-scryfall = { path = "../elbrus-scryfall" }
elbrus-db = { path = "../elbrus-db" }
anyhow.workspace = true
tokio.workspace = true
