[package]
name = "elbrus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
arc-swap.workspace = true
smallvec.workspace = true
indexmap.workspace = true
bitflags = { version = "2", features = ["serde"] }
