[package]
name = "elbrus-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
elbrus-core = { path = "../elbrus-core" }
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sqlx.workspace = true
tokio.workspace = true
async-trait = "0.1"
futures.workspace = true

[features]
fts = []
