[package]
name = "elbrus-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "elbrus"
crate-type = ["cdylib"]

[dependencies]
elbrus-core = { path = "../elbrus-core" }
elbrus-db = { path = "../elbrus-db" }
pyo3.workspace = true
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
pyo3-build-config = "0.28"
