[package]
name = "elbrus-scryfall"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
elbrus-core = { path = "../elbrus-core" }
elbrus-db = { path = "../elbrus-db" }
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
futures.workspace = true
