[package]
name = "elbrus-wasm"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
elbrus-core = { path = "../elbrus-core" }
wasm-bindgen.workspace = true
js-sys.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
