[package]
name = "elbrus-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
elbrus-core = { path = "../elbrus-core" }
wasm-bindgen.workspace = true
js-sys.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
